# dtrpg_mcp

./: .env.template  README.md  pyproject.toml
src/dtrpg_mcp/: __init__.py  client.py  server.py
tests/: conftest.py  test_client.py  test_server.py
